--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "start": "serve -s build",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+},
   "overrides": {
     "ajv": "6.12.6",
     "ajv-keywords": {
@@ -35,6 +35,7 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "^3.0.1",
     "react-to-print": "2.14.10",
+    "serve": "^14.2.4",
     "tailwindcss": "^4.0.14",
     "web-vitals": "^3.1.0"
   },
