--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "start": "serve -s build",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-},
+    "start": "serve -s build",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "overrides": {
     "ajv": "6.12.6",
     "ajv-keywords": {
@@ -32,6 +32,7 @@
     "puppeteer": "^24.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^3.0.1",
     "react-to-print": "2.14.10",
