--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "mongoose": "^8.12.1",
     "pdf-lib": "^1.17.1",
     "postcss-flexbugs-fixes": "^5.0.2",
